Change compton conf and others

--- a/config/.compton.conf
+++ b/config/.compton.conf
@@ -5,6 +5,8 @@ vsync = true;
 glx-swap-method = 2;
 xrender-sync-fence = true;
 
+inactive-opacity = 0.90;
+
 # window shadows for i3
 shadow = true;
 shadow-radius = 7;
