--- a/config/.compton.conf
+++ b/config/.compton.conf
@@ -5,10 +5,18 @@ vsync = true;
 glx-swap-method = 2;
 xrender-sync-fence = true;
 
-inactive-opacity = 0.90;
+# about opacity
+fading = true;
+no-fading-openclose = true;
+fade-in-step = 0.1;
+fade-out-step = 0.1;
+opacity-rule = [ "50:class_g = 'Gnome-terminal' && !focused" ];
+# inactive-opacity = 0.5;
+alpha-step = 0.01;
 
 # window shadows for i3
 shadow = true;
 shadow-radius = 7;
 shadow-offset-x = -7;
 shadow-offset-y = -7;
+
